# mattuliser

./: CMakeLists.txt  Makefile.am  README  README.md  common.mk  configure.ac
examples/: CMakeLists.txt  Makefile.am
examples/epiclepsy/: CMakeLists.txt  Makefile.am  epiclepsy.cpp  epiclepsy.h  main.cpp  showSpectrumHandler.cpp  showSpectrumHandler.h
examples/epicpcm/: CMakeLists.txt  Makefile.am  epicpcm.cpp  epicpcm.h  main.cpp
examples/geq/: CMakeLists.txt  Makefile.am  geq.cpp  geq.h  main.cpp
examples/geq3d/: Makefile.am  geq3d.cpp  geq3d.h  main.cpp
examples/pcm/: CMakeLists.txt  Makefile.am  main.cpp  pcm.cpp  pcm.h
examples/poly/: Makefile.am  main.cpp  poly.cpp  poly.h
examples/polycurve/: Makefile.am  main.cpp  polycurve.cpp  polycurve.h
examples/shaders/: Makefile.am  main.cpp  shaders.cpp  shaders.h
examples/surface/: Makefile.am  main.cpp  surface.cpp  surface.h
src/: CMakeLists.txt  Makefile.am  argexception.cpp  argexception.h  circularBuffer.cpp  circularBuffer.h  dsp.h  dspmanager.cpp  dspmanager.h  packetqueue.cpp  packetqueue.h  sdlexception.cpp  sdlexception.h  visualiser.cpp  visualiser.h  visualiserWin.cpp  visualiserWin.h
src/cmake/: FindFFTW.cmake
src/dsp/: dsp.h  fft.cpp  fft.h  pcm.cpp  pcm.h
src/eventHandlers/: eventhandler.h  keyQuit.cpp  keyQuit.h  quitEvent.cpp  quitEvent.h
src/util/: freelist.cpp  freelist.h
